[gd_scene load_steps=3 format=3 uid="uid://olnks8p2lfpn"]

[ext_resource type="Script" path="res://UI/MainMenu.gd" id="1_8e8ci"]
[ext_resource type="PackedScene" uid="uid://cxq44ooukv26n" path="res://UI/Options.tscn" id="1_xnqun"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8e8ci")

[node name="MainContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/VBoxContainer"]
layout_mode = 2
text = "Zombie Come to  the Neighborhood"

[node name="Start" type="Button" parent="MainContainer/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="Options" type="Button" parent="MainContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="MarginContainer" type="MarginContainer" parent="MainContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 60

[node name="Directions" type="Label" parent="MainContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
text = "Space  or LMC to shoot
WASD or arrows to move
Mouse to rotate gun
P to pause
R to use Health Packs"
horizontal_alignment = 1

[node name="OptionsContainer" parent="." instance=ExtResource("1_xnqun")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_right = 0.5
offset_left = -92.5
offset_top = -104.5
offset_right = 92.5
offset_bottom = 104.5

[connection signal="pressed" from="MainContainer/VBoxContainer/Start" to="." method="start"]
[connection signal="pressed" from="MainContainer/VBoxContainer/Options" to="." method="showOptions"]
[connection signal="returnButton" from="OptionsContainer" to="." method="hideOptions"]
